--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,32 @@
 site_name: Bijan Rahnamai
+
 theme:
   name: material
+  features:
+    - navigation.instant
+    - navigation.tracking
+    - navigation.tabs
+
 extra:
   generator: true
 markdown_extensions:
   - attr_list
   - md_in_html
+
+# Page tree
+nav:
+  - Home: index.md
+  - Engineering:
+      - Work Experience: engineering/engineering.md
+      - Certifications: engineering/certifications.md
+  - Art:
+      - poetry: art/poetry.md
+      - rapping: art/rapping.md
+      - freestyling: art/freestyling.md
+  - Blog:
+      - Favorite Books: blog/books.md
+      - America's National Parks: blog/nps.md
+      - Texas State Parks: blog/texas-state-parks.md
+  - Dogs and Cats:
+      - pictures of my dog: animals/my-dog.md
+      - pictures of other's people's dogs: animals/other-dogs.md
