add doug website

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
 #      - Recorded Music: art/recorded_music.md
   - Websites I Manage:
       - Austin Open Mic Poetry: websites_i_manage/austin_open_mic_poetry.md
+      - My Friend Doug: websites_i_manage/my_friend_doug.md
   - Books:
       - Book Reviews: books/book-reviews.md
   - Engineering:
